// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";

import "google/protobuf/timestamp.proto";
// [END declaration]

// [START java_declaration]
option java_package = "assignment"; //Mudar isto
option java_outer_classname = "CarandOwners";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "Google.Protobuf.Examples.C";
// [END csharp_declaration]

// [START messages]\

message Car {
    int32 id = 1;
    string brand = 2;
    string model = 3;
    string engineSize = 4;
    string power = 5;
    string comsuption = 6;
    string plate = 7;
    int32 ownerid =8;


}

message Owner {
    int32 ownerid = 8;
    string name = 2;
    string telephone = 3;
    string address = 4;
}

message CarList {
    repeated Car carros = 1;
}

message OwnerList {
    repeated Owner donos = 1;
}

message CapsulaXML{
    string stringXML=1;
}


service User{
    rpc pedido(Owner) returns (CarList);
    rpc request(OwnerList) returns (CarList);
    rpc requestXML (CapsulaXML) returns (CapsulaXML);
}
// [END messages]
